# FYDP-2023

./: .gitmodules  README.md  ros_noetic.md
arduino/: ultrasonic.ino
arduino/ultrasonic/: ultrasonic.ino
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/include/lidar_msgs/: BoxInfo.h  Curb.h  Lane.h  PointStamped.h  SocketBox.h  box.h
catkin_ws/devel/lib/cyglidar_d1/: cyglidar_pcl_publisher  plane_detector
catkin_ws/devel/lib/pkgconfig/: cyglidar_d1.pc  lidar_curb_detection.pc  lidar_msgs.pc
catkin_ws/devel/share/cyglidar_d1/cmake/: cyglidar_d1Config.cmake
catkin_ws/devel/share/gennodejs/ros/lidar_msgs/msg/: _index.js
catkin_ws/devel/share/lidar_curb_detection/cmake/: lidar_curb_detectionConfig.cmake
catkin_ws/devel/share/lidar_msgs/cmake/: lidar_msgs-msg-extras.cmake  lidar_msgs-msg-paths.cmake  lidar_msgsConfig.cmake
catkin_ws/devel/share/roseus/ros/lidar_msgs/: manifest.l
catkin_ws/devel/share/roseus/ros/lidar_msgs/msg/: SocketBox.l
catkin_ws/src/: CMakeLists.txt
catkin_ws/src/RVizMeshVisualizer/launch/: display.launch
catkin_ws/src/RVizMeshVisualizer/meshes/: manual_wheelchair.dae
catkin_ws/src/RVizMeshVisualizer/scripts/: object_visualizer.py
catkin_ws/src/audio_feedback/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/audio_feedback/audio_warnings/curb/: curb_back  curb_back_left  curb_back_right  curb_front  curb_front_left  curb_front_right  curb_left  curb_right
catkin_ws/src/audio_feedback/audio_warnings/object/: object_back  object_back_left  object_back_right  object_front  object_front_left  object_front_right  object_left  object_right
catkin_ws/src/audio_feedback/audio_warnings/tip/: tip_front_high  tip_front_low
catkin_ws/src/audio_feedback/launch/: config.rviz  system.launch
catkin_ws/src/audio_feedback/msg/: AudioWarning.msg  LidarCurb.msg  LidarObject.msg  TipWarning.msg  UltrasonicCurb.msg  UltrasonicObject.msg
catkin_ws/src/audio_feedback/src/: aggregator_node.py  audio_feedback_node.py  custom_enums.py
catkin_ws/src/cyglidar_d1/: CMakeLists.txt
catkin_ws/src/cyglidar_d1/include/: CameraLens.h  Constants_CygLiDAR_D1.h
catkin_ws/src/cyglidar_d1/launch/: cyglidar.launch  triple_lidar.launch
catkin_ws/src/cyglidar_d1/rviz/: cyglidar_config.rviz
catkin_ws/src/cyglidar_d1/scripts/: angle_correction_generator.py  cyglidar.rules
catkin_ws/src/cyglidar_d1/src/: cyglidar_pcl_publisher.cpp  plane_detector.cpp
catkin_ws/src/i2c/: CMakeLists.txt  package.xml
catkin_ws/src/i2c/include/i2c/: I2C_Manager.hpp
catkin_ws/src/i2c/msg/: IMU.msg
catkin_ws/src/i2c/src/: I2C_Manager.cpp  i2c_node.cpp
catkin_ws/src/imu_tipping/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/imu_tipping/src/: imu_tipping_node,py
catkin_ws/src/lidar/: CMakeLists.txt  package.xml
catkin_ws/src/lidar/launch/: lidars.launch
catkin_ws/src/lidar/src/: plane_detector.cpp
catkin_ws/src/lidar_merge/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/lidar_merge/include/lidar_merge/: PointCloudMerger.h
catkin_ws/src/lidar_merge/launch/: calibrate.launch  config.rviz  merge.launch  system.launch
catkin_ws/src/lidar_merge/lidar_merge/: calibration.py  constants.py  serialize.py
catkin_ws/src/lidar_merge/scripts/: calibrate.py  calibration.py  publish.py
catkin_ws/src/lidar_merge/src/: PointCloudMerger.cpp  lidar_merge_node.cpp  lidar_merger.cpp
catkin_ws/src/ultrasonic_detectors/: CMakeLists.txt  package.xml
catkin_ws/src/ultrasonic_detectors/launch/: object_detectors.launch
catkin_ws/src/ultrasonic_detectors/src/: ultrasonic_curb_detector.py  ultrasonic_obj_detector.py
